# Tunnet

./: .env.example  .gitignore  .mise.toml  Cargo.toml  README.md  biome.json  docker-compose.yml  lefthook.yml  package.json
.githooks/: pre-commit  pre-merge-commit  pre-push
.github/: FUNDING.yml
.github/workflows/: ci.yml  codeql.yml  guard-no-cloud.yml  release-binaries.yml  release-sdk.yml
apps/dashboard/: package.json  tsconfig.json  vite.config.ts
apps/dashboard/public/: site.webmanifest
apps/dashboard/src/: routeTree.gen.ts  styles.css  vite-env.d.ts
apps/dashboard/src/components/app/: api-keys-panel.tsx  app-shell.tsx  app-sidebar.tsx  create-serve-dialog.tsx  create-tunnel-dialog.tsx  endpoint-combobox.tsx  enrollment-token-dialog.tsx  machine-expiry-display.tsx  machine-labels.tsx  machine-routes-panel.tsx  network-force-graph.tsx  network-overview.tsx  org-switcher.tsx  page-header.tsx  policy-selector-fields.tsx  route-management.tsx  status-badge.tsx  user-menu.tsx
apps/dashboard/src/components/topology/: AccessCanvas.tsx  DetailPanel.tsx  NetworkCanvas.tsx  OverviewCanvas.tsx  TopologyProvider.tsx  path.ts  registry.ts  types.ts
apps/dashboard/src/components/ui/: sidebar.tsx  tabs.tsx
apps/dashboard/src/hooks/: use-entitlements.ts
apps/dashboard/src/lib/: auth-client.ts  env.ts  machine-expiry.ts  machine-utils.ts  management-client.ts  query-keys.ts
apps/dashboard/src/lib/queries/: management.ts
apps/dashboard/src/routes/: accept-invitation.$invitationId.tsx  index.tsx  login.tsx
apps/dashboard/src/routes/app/: index.tsx  logs.tsx  organization.tsx  users.tsx
apps/dashboard/src/routes/device/: approve.tsx  index.tsx
apps/docs/.vitepress/: config.mts
apps/docs/cli/: direct.md  enroll.md  index.md  reload.md  run.md  status.md  update.md  validate.md
apps/docs/guide/: comparison.md  configuration.md  installation.md  quickstart-direct.md  quickstart-managed.md
apps/docs/guide/concepts/: audit-logs.md  encryption.md  enrollment.md  networks.md  peerdns.md
apps/docs/modes/: upgrade.md
apps/docs/modes/direct/: index.md
apps/docs/modes/managed/: index.md
apps/docs/products/tunnel/: index.md
apps/docs/self-hosting/: control-plane.md  dashboard.md  docker.md  env.md  management.md
apps/management/: package.json
apps/management/src/: auth.ts  index.ts
apps/management/src/api/: cli-auth.ts  ssh-auth-browser.ts
apps/management/src/api/v1/: audit.ts  device-profiles.ts  devices.ts  entitlements.ts  index.ts  serves.ts  (+6 more)
apps/management/src/lib/: audit.ts  bootstrap-user.ts  control-plane-client.ts  device-labels.ts  device-metadata.ts  device.ts  entitlements.ts  serialize-device.ts  tag-ownership.ts
charts/tunnet-operator/: values.yaml
cloud/dashboard/: package.json
cloud/dashboard/src/: index.tsx
cloud/management/: package.json
cloud/management/src/: index.ts
crates/tunnet-agent/: Cargo.toml
crates/tunnet-agent/src/: accept.rs  cli.rs  cmds.rs  cmds_direct.rs  cmds_send.rs  cmds_ssh.rs  dataplane.rs  dgram_pump.rs  ingress.rs  main.rs  runtime.rs  service.rs  ssh_nat.rs  tun_io.rs  win_service.rs
crates/tunnet-agent/src/ssh/: server.rs
crates/tunnet-audit/: Cargo.toml
crates/tunnet-audit/src/: chain.rs  class.rs  config.rs  emitter.rs  event.rs  lib.rs  postgres.rs  sink.rs  stream.rs  verify.rs  worker.rs
crates/tunnet-common/: Cargo.toml
crates/tunnet-common/src/: lib.rs  license.rs  ws.rs
crates/tunnet-control/: Cargo.toml
crates/tunnet-control/src/: admin.rs  audit.rs  device_expiry.rs  device_expiry_sql.rs  device_handlers.rs  http.rs  main.rs  org_agent_policy.rs  policy_store.rs  posture.rs  presence.rs  reconnect.rs  register.rs  snapshot.rs  state.rs  tunnels.rs  ws_hub.rs
crates/tunnet-control/src/ws/: mod.rs  session.rs
crates/tunnet-core/: Cargo.toml
crates/tunnet-core/src/: dns_stub.rs  iroh_pool.rs  lib.rs  node.rs  routing.rs  serve.rs  state.rs  stream.rs  sync.rs  tunnel.rs
crates/tunnet-core/src/direct/: discovery.rs  firewall.rs  membership.rs  mod.rs
crates/tunnet-core/src/inspect/: http_tee.rs  mod.rs  proxy.rs  server.rs  store.rs  ui.rs
crates/tunnet-core/src/ipc/: client.rs  mod.rs  protocol.rs  server.rs  transport.rs
crates/tunnet-kube-node/: Cargo.toml
crates/tunnet-kube-node/src/: main.rs
crates/tunnet-node-napi/: Cargo.toml
crates/tunnet-node-napi/src/: lib.rs
crates/tunnet-relay/src/: agent_accept.rs  main.rs
crates/tunnet/src/: node.rs
crates/tuntun-agent/src/: accept.rs  cli.rs  cmds.rs  cmds_device.rs  cmds_direct.rs  cmds_login.rs  cmds_ssh.rs  config.rs  dataplane.rs  gossip_presence.rs  ip.rs  iroh_io.rs  main.rs  offload.rs  routing.rs  runtime.rs  service.rs  system_dns.rs  system_info.rs  system_routes.rs  wintun_path.rs
crates/tuntun-agent/src/ssh/: pty.rs
crates/tuntun-common/src/: duration.rs  lib.rs
crates/tuntun-control/: Cargo.toml
crates/tuntun-control/src/: admin.rs  auth.rs  config.rs  device_expiry.rs  device_expiry_sql.rs  device_handlers.rs  device_labels.rs  device_metadata.rs  enrollment.rs  http.rs  main.rs  pg_notify.rs  presence.rs  register.rs  service_auth.rs  snapshot.rs  ssh_auth.rs  state.rs  ws_hub.rs
crates/tuntun-core/: Cargo.toml
crates/tuntun-core/src/: acl.rs  acl_hook.rs  agent_config.rs  control.rs  coordinator.rs  dns_stub.rs  lib.rs  node.rs  send.rs  state.rs  ws_client.rs
crates/tuntun-core/src/direct/: admin.rs  auth.rs  discovery.rs  firewall.rs  invite.rs  ip.rs  membership.rs  mod.rs  sync.rs
crates/tuntun-core/src/ipc/: client.rs  dataplane.rs  mod.rs  protocol.rs  server.rs  transport.rs
crates/tuntun-core/src/mdns_relay/: gossip.rs  mod.rs  proxy.rs  responder.rs  scanner.rs  types.rs
crates/tuntun-core/src/secret_store/: platform.rs
crates/tuntun-node-napi/: README.md
crates/tuntun-node-napi/src/: duplex.rs  lib.rs
crates/tuntun-relay/src/: main.rs
deploy/: Dockerfile.dashboard  Dockerfile.management
go/terraform-provider-tunnet/: go.mod  go.sum
scripts/: bench.ps1  bench.sh  guard-oss-push.ts  guard-public-push.ts  push-oss.ts  sync-private.ts  sync-public.ts
(+18 files in other folders)
