[workspace]
resolver = "2"
members = [
  "crates/tuntun-common",
  "crates/tuntun-core",
  "crates/tuntun-control",
  "crates/tuntun-agent",
  "crates/tuntun-node-napi",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt", "codec"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
async-trait = "0.1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.27"
opentelemetry = "0.26"
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.26", features = ["grpc-tonic"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
], default-features = false }

axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower_governor = { version = "0.8", features = ["axum"] }
tower-http = { version = "0.6", features = [
  "trace",
  "cors",
  "limit",
  "timeout",
] }

dashmap = "6"
parking_lot = "0.12"
crossbeam-channel = "0.5"
arc-swap = "1"

hex = "0.4"
base64 = "0.22"
rand = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hmac = "0.13"
sha2 = "0.11"
blake3 = "1"
argon2 = "0.5"
secrecy = { version = "0.8", features = ["serde"] }

sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "json",
  "ipnetwork",
] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ipnet = { version = "2", features = ["serde"] }
ipnetwork = "0.20"
hickory-proto = "0.26"

prometheus = "0.14"

# Networking
iroh = { version = "1.0.1" }
iroh-gossip = "0.101"
tun-rs = { version = "2", features = ["async_tokio"] }

# napi-rs v3
napi = { version = "3", features = [
  "async",
  "tokio_rt",
  "napi9",
  "serde-json",
] }
napi-derive = "3"
napi-build = "2"

# Local
tuntun-common = { path = "crates/tuntun-common" }
tuntun-core = { path = "crates/tuntun-core" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
