[workspace]
resolver = "2"
members = [
  "crates/tuntun-common",
  "crates/tuntun-core",
  "crates/tuntun-control",
  "crates/tuntun-agent",
  "crates/tuntun-relay",
  "crates/tuntun-node-napi",
]

[workspace.package]
version = "0.6.0"
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1.52", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt", "codec"] }
tokio-tungstenite = { version = "0.30", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.33"
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
reqwest = { version = "0.13", features = [
  "json",
  "rustls",
], default-features = false }

axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower_governor = { version = "0.8", features = ["axum"] }
tower-http = { version = "0.7", features = [
  "trace",
  "cors",
  "limit",
  "timeout",
] }

dashmap = "6"
parking_lot = "0.12"
arc-swap = "1"

hex = "0.4"
base64 = "0.22"
rand = "0.10"
ed25519-dalek = { version = "=3.0.0-rc.0", features = ["rand_core"] }
hmac = "0.13"
sha2 = "0.11"
blake3 = "1"
toml = "0.8"
bs58 = "0.5"
iroh-mdns-address-lookup = "0.4"
argon2 = "0.5"
secrecy = { version = "0.10", features = ["serde"] }

sqlx = { version = "0.9", features = [
  "runtime-tokio",
  "tls-rustls-ring",
  "postgres",
  "uuid",
  "chrono",
  "json",
  "ipnetwork",
] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ipnet = { version = "2", features = ["serde"] }
ipnetwork = { version = "0.21", features = ["serde"] }
hickory-proto = "0.26"

metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }

# TLS (Serve / Tunnel)
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls-pemfile = "2"
rcgen = "0.14"

# Networking
iroh = { version = "1.0.2" }
iroh-gossip = "0.101"
iroh-blobs = "0.103"
iroh-docs = "0.101"
tun-rs = { version = "2", features = ["async_tokio"] }
portable-pty = "0.9"
rusqlite = { version = "0.37", features = ["bundled"] }

# napi-rs v3
napi = { version = "3", features = [
  "async",
  "tokio_rt",
  "napi9",
  "serde-json",
] }
napi-derive = "3"
napi-build = "2"

# Local
tuntun-common = { path = "crates/tuntun-common" }
tuntun-core = { path = "crates/tuntun-core" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
