[package]
name = "tunnet-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "tunnet"
path = "src/main.rs"

[dependencies]
tunnet-common.workspace = true
tunnet-core.workspace = true
tunnet-posture.workspace = true
tunnet-policy-engine.workspace = true

tokio.workspace = true
futures-util.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
arc-swap.workspace = true
hex.workspace = true
base64.workspace = true
chrono.workspace = true
uuid.workspace = true
rand.workspace = true
ed25519-dalek.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
ipnet.workspace = true
sha2.workspace = true
reqwest.workspace = true

iroh.workspace = true
iroh-gossip.workspace = true
iroh-blobs.workspace = true
tun-rs.workspace = true
portable-pty.workspace = true
russh.workspace = true
russh-sftp.workspace = true
async-trait.workspace = true
rusqlite.workspace = true
self_update = { version = "1.0.0-rc.5", default-features = false, features = ["github", "archive-tar", "compression-tar-gz", "archive-zip", "compression-zip-deflate", "rustls", "reqwest", "progress-bar", "checksums"] }
tokio-util = { workspace = true, features = ["rt"] }

[target.'cfg(unix)'.dependencies]
ecdysis = { version = "1.1.1", features = ["tokio_ecdysis", "systemd_notify"] }
libc = "0.2"

[target."cfg(windows)".dependencies]
windows-service = "0.8.1"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Console",
] }
