[package]
name = "tunnet-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared protocol types and helpers for Tunnet"
repository = "https://github.com/tunnetio/Tunnet"
homepage = "https://tunnet.io"
documentation = "https://docs.rs/tunnet-common"
keywords = ["tunnet", "mesh", "vpn", "p2p"]
categories = ["network-programming"]
readme = "README.md"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
hex.workspace = true
base64.workspace = true
blake3.workspace = true
ed25519-dalek.workspace = true
chrono.workspace = true
ipnet.workspace = true
uuid.workspace = true
reqwest.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
rand.workspace = true
