[package]
name = "tunnet-control"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
tunnet-common.workspace = true
tunnet-posture.workspace = true
tunnet-audit.workspace = true

tokio.workspace = true
tokio-util.workspace = true
futures-util.workspace = true

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tower_governor.workspace = true

serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
dotenvy.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
arc-swap.workspace = true

hex.workspace = true
base64.workspace = true
blake3.workspace = true
bytes.workspace = true
rand.workspace = true
ed25519-dalek.workspace = true
argon2.workspace = true
secrecy.workspace = true

hmac.workspace = true
sha2.workspace = true

sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
ipnet.workspace = true
ipnetwork.workspace = true

metrics.workspace = true
metrics-exporter-prometheus.workspace = true
aes-gcm = "0.10"

tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
