[package]
name = "tunnet-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core mesh runtime for Tunnet (identity, routing, streams, sync)"
repository = "https://github.com/tunnetio/Tunnet"
homepage = "https://tunnet.io"
documentation = "https://docs.rs/tunnet-core"
keywords = ["tunnet", "mesh", "vpn", "p2p", "iroh"]
categories = ["network-programming"]
readme = "README.md"

[features]
default = ["managed", "direct", "send", "serve", "tunnel", "dns", "recording", "ipc"]
managed = ["dep:tokio-tungstenite"]
direct = ["dep:iroh-docs", "dep:iroh-blobs", "dep:mainline", "dep:iroh-mdns-address-lookup", "dep:mdns-sd", "dep:bs58"]
send = ["dep:iroh-blobs"]
serve = ["dep:rustls", "dep:tokio-rustls", "dep:rustls-pemfile"]
tunnel = ["dep:axum", "dep:httparse"]
dns = ["dep:hickory-proto"]
recording = []
ipc = []

[dependencies]
tunnet-common.workspace = true

tokio.workspace = true
tokio-util.workspace = true
tokio-tungstenite = { workspace = true, optional = true }
futures-util.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
arc-swap.workspace = true
reqwest.workspace = true
hex.workspace = true
base64.workspace = true
chrono.workspace = true
uuid.workspace = true
rand.workspace = true
ed25519-dalek.workspace = true
ipnet.workspace = true
hickory-proto = { workspace = true, optional = true }

iroh.workspace = true
iroh-gossip.workspace = true
iroh-blobs = { workspace = true, optional = true }
iroh-docs = { workspace = true, optional = true }

hmac.workspace = true
sha2.workspace = true
blake3.workspace = true
toml.workspace = true
bs58 = { workspace = true, optional = true }
iroh-mdns-address-lookup = { workspace = true, optional = true }
mainline = { version = "7", optional = true }

rustls = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
aes-gcm = "0.10"
zeroize = { version = "1.9.0", features = ["std", "derive"] }
mdns-sd = { version = "0.20.1", optional = true }
axum = { workspace = true, optional = true }
httparse = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Security_Cryptography",
  "Win32_System_Threading",
] }
