[package]
name = "tunnet-node-napi"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]

napi.workspace = true
napi-derive.workspace = true

tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true }
tunnet = { version = "0.2.0", path = "../tunnet", features = ["managed", "send"] }

[build-dependencies]
napi-build.workspace = true
