[package]
name = "tuntun-control"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tuntun-common.workspace = true

tokio.workspace = true
tokio-util.workspace = true
futures-util.workspace = true
async-trait.workspace = true

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tower_governor.workspace = true

serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
dotenvy.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
arc-swap.workspace = true

hex.workspace = true
base64.workspace = true
blake3.workspace = true
bytes.workspace = true
rand.workspace = true
ed25519-dalek.workspace = true
argon2.workspace = true
secrecy.workspace = true

hmac.workspace = true
sha2.workspace = true

sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
ipnet.workspace = true
ipnetwork.workspace = true

prometheus.workspace = true
