[package]
name = "tuntun-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tuntun-common.workspace = true

tokio.workspace = true
tokio-util.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
arc-swap.workspace = true
reqwest.workspace = true
hex.workspace = true
base64.workspace = true
chrono.workspace = true
uuid.workspace = true
rand.workspace = true
ed25519-dalek.workspace = true
ipnet.workspace = true
hickory-proto.workspace = true

iroh.workspace = true
iroh-gossip.workspace = true
iroh-blobs.workspace = true
iroh-docs.workspace = true

hmac.workspace = true
sha2.workspace = true
blake3.workspace = true
mainline = "7"

rustls.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
