[package]
name = "tuntun-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tuntun-common.workspace = true

tokio.workspace = true
tokio-util.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
arc-swap.workspace = true
reqwest.workspace = true
hex.workspace = true
base64.workspace = true
chrono.workspace = true
uuid.workspace = true
rand.workspace = true
ed25519-dalek.workspace = true
ipnet.workspace = true
hickory-proto.workspace = true

iroh.workspace = true
iroh-gossip.workspace = true
iroh-blobs.workspace = true
iroh-docs.workspace = true

hmac.workspace = true
sha2.workspace = true
blake3.workspace = true
toml.workspace = true
bs58.workspace = true
iroh-mdns-address-lookup.workspace = true
mainline = "7"

rustls.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true
aes-gcm = "0.10"
zeroize = { version = "1.9.0", features = ["std", "derive"] }
mdns-sd = "0.20.1"

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security_Cryptography",
] }
